[package]
name = "fibonacci_client"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 3

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }